Let backgrounds paint in scrolling contents layer without overflow.

Since r481209, the document creates composited scrolling layers with RLS even if
it doesn't overflow.  But PaintLayer::GetBackgroundPaintLocation didn't get the
memo.

Bug: 741858
Change-Id: I1fe09532eecc2bbd1b71c42e171bf86f4a893382